Fix wrong image loaded on index.html fix some contrast reported by Axe on header

--- a/style.css
+++ b/style.css
@@ -650,7 +650,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;    
+    color: #101010!important;    
 }
 
 .container {
